[project]
name = "scistudio"
version = "0.3.2a0"
description = "AI-native, inclusive workflow runtime for multimodal scientific data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Jiazhen Zhang"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.110,<0.139",  # Starlette 1.3 nests included routers under _IncludedRouter; route-contract tests handle both layouts (#1769).
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.29",
    "numpy>=2.1",  # Core Array/storage/preview/plot paths import NumPy directly; numpy-2 baseline (#1809) — runtime + mypy stubs already assume 2.x.
    "zarr>=3.0",
    "pyarrow>=15.0",
    "watchdog>=4.0",
    "typer>=0.12",
    "xxhash>=3.4",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "psutil>=5.9",  # ADR-022: OS-level memory monitoring
    "filelock>=3.13",  # ADR-033 OQ7: file-locked atomic writes for MCP write tools
    "ruamel.yaml>=0.18",  # T-ECA-203: ruamel round-trip preserves comments/order in update_block_config
    "pywinpty>=2.0; sys_platform == 'win32'",  # ADR-034 Phase 1.2: PTY-based terminal embedding for claude/codex TUIs
    "platformdirs>=4.2",  # ADR-037 desktop/user-scoped config, cache, logs, and plugin directories
    "packaging>=24.0",  # Desktop package installer parses plugin dependency requirements.
    "fastmcp>=3.1,<4",  # ADR-040 §3.1: FastMCP migration — replaces hand-rolled JSON-RPC MCP server with FastMCP 3.x.
    "matplotlib>=3.8",  # ADR-048 SPEC 2: Python plot jobs import matplotlib in the core plot runtime.
    "pandas>=2.2",  # ADR-048 SPEC 2: Python plot jobs open DataFrame/Series inputs with pandas.
    "openpyxl>=3.1",  # #1810: core DataFrame/Series .xlsx read/write (pandas Excel engine).
]

[project.optional-dependencies]
ai = [
    "anthropic>=0.30",
    "openai>=1.30",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.5",
    "pytest-timeout>=2.3",  # ADR-040 preflight: hard wall-clock kill for hung tests (Windows subprocess/asyncio edge cases)
    "hypothesis>=6.0",  # #1602: property-based tests (e.g. serializer path round-trip)
    "ruff>=0.11",
    "mypy>=1.15",
    "types-PyYAML>=6.0",
    "import-linter>=2.0",
    "griffe>=1.7",
    "pre-commit>=4.0",
    # ADR-042 Addendum 6 parity venvs must be able to run the local mirror of
    # ci.yml jobs. Keep build-system helpers in the dev extra so python_tests
    # and wheel_release_smoke do not fail as environment-parity gaps.
    "setuptools>=68.0",
    "build>=1.2",
    # The in-repo test fixture package (tests/fixtures/scistudio-blocks-fixture)
    # performs minimal real TIFF round-trips so core IO/previewer machinery
    # tests can exercise a package-owned capability. Keep this test-only helper
    # out of the core runtime dependency set.
    "tifffile>=2024.8",
    # #1340: vulture wires into full_audit as informational dead-code child
    # report (ADR-042 code-quality stack named vulture but never installed it).
    "vulture>=2.11",
    # ADR-042 Addendum 2 / Addendum 6: semantic-dup parity checks run
    # scripts/semantic_dup_scan.py locally from the gate_record parity venv.
    # CI installs fastembed explicitly for the same ratchet job; keep the dev
    # extra in sync so auto-provisioned local parity environments can run it.
    "fastembed>=0.7",
]
docs = [
    # ADR-052 §7: the author-facing API reference is generated from docstrings +
    # the scistudio.stability decorators via mkdocstrings (griffe collector), so
    # the reference cannot drift from the code and tier/Since badges render
    # automatically. ``scripts/docs/build_reference.py`` emits the public surface
    # (the 9 canonical roots' ``__all__``) under ``docs/user/reference/`` and runs
    # ``mkdocs build --strict``. ``griffe`` is already pinned in the ``dev`` extra.
    "mkdocs>=1.6",
    "mkdocstrings[python]>=0.26",
    "griffe>=1.7",
]

[project.scripts]
scistudio = "scistudio.cli.main:app"

# Issue #1779: core's own first-party blocks are NOT declared here. They are
# registered by direct import in ``scistudio.blocks.registry._scan._scan_builtins``
# so the palette is environment-independent. Entry-point discovery depends on
# installed ``*.dist-info`` metadata, which the desktop bundle does not carry
# (it ships core as raw source on PYTHONPATH and strips build metadata —
# ``desktop/scripts/stage-resources.sh``, #1775). Declaring first-party blocks
# here made the entire process/code/app palette disappear in packaged builds.
# This group is now reserved for third-party plugin packages only.
[project.entry-points."scistudio.blocks"]

# T-TRK-004 / ADR-028 §D4: the ``scistudio.adapters`` entry-point group
# has been removed. Plugin-owned IO blocks now register via the
# ``scistudio.blocks`` entry-point group as ``IOBlock`` subclasses
# (see ADR-028 §D1 + Addendum 1 §C). Core ``LoadData`` / ``SaveData`` are
# first-party blocks registered in ``_scan_builtins`` (#1779), not here.

# T-008 / ADR-027 D2: the previous entry-points here pointed at
# core ``Image``, ``Spectrum``, and ``PeakTable`` classes that were
# removed in T-006 and T-007. The classes now live in plugin
# packages (``scistudio-blocks-imaging``, ``scistudio-blocks-spectral``)
# which declare their own ``scistudio.types`` entry-points. The core
# repository contributes no built-in domain types via this group.
[project.entry-points."scistudio.types"]

# The ``scistudio.runners`` entry-point group was removed with the dead legacy
# CodeBlock runner layer (ADR-052 §7A): CodeBlock resolves interpreters through
# ``scistudio.blocks.code.backends`` / ``_backends_registry``, not the deleted
# ``runners/*`` modules. The group had no runtime consumer.

[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scistudio = [
    "api/static/**/*",
    "cli/templates/**/*.tpl",
    # ADR-040 §3.4: multi-skill source tree must ship in the wheel so
    # ``scistudio install --target claude|codex`` and the agent_provisioning
    # cross-installer can find canonical bodies.
    "_skills/scistudio/**/*.md",
    # ADR-040 §3.5-3.8: agent_provisioning template files (CLAUDE.md/AGENTS.md,
    # codex_config.toml, 6 hook scripts) must ship with the wheel so
    # ``scistudio init`` / ``ApiRuntime.create_project`` can install them.
    "agent_provisioning/templates/**/*",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]
# #1340: vulture_allowlist.py is a vulture configuration file, not real code.
# The ``_.attr`` lookups are sentinels vulture reads; ruff would flag every
# line as B018 / RUF100 if it linted them.
extend-exclude = ["vulture_allowlist.py"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
  "RUF", # ruff-specific
  "C901", # mccabe complexity ceiling (#1602)
  "TD",  # flake8-todos: keep TODO markers well-formed + issue-linked (#1602)
  "FIX", # flake8-fixme: flag leftover FIXME/XXX/HACK markers (#1602)
]
ignore = [
  "E501", # line too long (handled by formatter)
  # flake8-todos rules we deliberately do NOT enforce, to fit the repo's
  # ``TODO(#NNN):`` convention (issue link lives in the author slot, not a
  # trailing URL) — issue-link enforcement is owned by scripts/deferral_scan.py
  # (#1602), which understands ``TODO(#NNN)`` exactly:
  "TD002", # missing author — our convention puts ``#NNN`` here, not a name
  "TD003", # missing issue link — deferral_scan owns the ``(#NNN)`` check
  # flake8-fixme FIX002 flags *every* TODO line; we allow tracked TODOs, so
  # bare-TODO blocking is owned by deferral_scan, not ruff:
  "FIX002", # line contains TODO
]

[tool.ruff.lint.mccabe]
# Grandfathered ceiling (#1602): current worst is ``validate_workflow`` at 60,
# carried with an explicit ``# noqa: C901``. 30 blocks any *new* function from
# exceeding it while leaving the existing single offender visible. Ratchet down
# as complex functions are refactored.
max-complexity = 30

[tool.ruff.lint.isort]
known-first-party = ["scistudio"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
# Respect per-module follow_imports="skip" for stub (.pyi) packages too, so the
# numpy/zarr/tifffile overrides below actually skip their 3.12-syntax stubs under
# our python_version = "3.11" target (otherwise stub parse errors leak through).
follow_imports_for_stubs = true
mypy_path = "src"
packages = ["scistudio"]

# zarr 3.2+ uses PEP 695 generic syntax (`class Foo[T]:`) which is only valid
# in Python 3.12+. Our mypy is pinned to python_version = "3.11", so it cannot
# parse zarr's source. Skip following imports into zarr to avoid syntax errors.
# See issue #693.
[[tool.mypy.overrides]]
module = ["zarr", "zarr.*"]
follow_imports = "skip"

# tifffile uses Python 3.12+ type-alias syntax in current releases. The package
# remains an optional/dev data-format helper for tests, while SciStudio's mypy
# target is still Python 3.11, so do not parse tifffile internals.
[[tool.mypy.overrides]]
module = ["tifffile", "tifffile.*"]
follow_imports = "skip"

# numpy 2.x ships PEP 695 type-alias syntax (`type X = ...`) in its stubs, valid
# only in Python 3.12+. mypy is pinned to python_version = "3.11" (see above), so
# it cannot parse numpy's stubs. Skip following imports into numpy to avoid the
# stub syntax error; SciStudio code does not rely on numpy's internal types.
[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
# TODO(#1540): Restore coverage gate to ≥80% once ADR-034 Phase 1-3 tests are
#   added back. Lowered temporarily during PR #808 rollback.
#   Out of scope per owner decision recorded in issue #1540.
#   Followup: https://github.com/zjzcpj/scistudio/issues/1540
addopts = "-ra -q --cov=scistudio --cov-report=term-missing --cov-fail-under=70"
# ADR-040 preflight: per-test 60s wall-clock kill via pytest-timeout. Without
# this, hung tests (Windows subprocess pipe issues, deadlocked asyncio) hang
# pytest forever which hangs agents forever. ``thread`` method works on Windows
# (signal method requires SIGALRM, POSIX-only).
timeout = 60
timeout_method = "thread"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "requires_r: tests that need an R installation with Rscript on PATH",
    "requires_fiji: marks tests that need a local Fiji install at the master-plan §10 path (deselect with '-m \"not requires_fiji\"').",
]
# filterwarnings policy (issue #1560):
#   - "error" is NOT applied globally — the suite uses third-party libraries
#     (zarr, fsspec, h5py, PIL, pytest-asyncio) that emit deprecation warnings
#     we do not own.  Turning those into errors would break CI on every upstream
#     release.  Instead we silence known third-party deprecations explicitly and
#     let unrecognised warnings from scistudio.* surface as errors so regressions
#     are visible.
#
#   Policy rationale:
#     1. Third-party DeprecationWarnings: ignore (not our responsibility to fix
#        until we upgrade the dependency; tracked via normal dependency updates).
#     2. PendingDeprecationWarning from third-parties: ignore (same rationale).
#     3. DeprecationWarning whose source is scistudio.*: error (we own it).
#     4. PytestUnraisableExceptionWarning: error (signals hidden async failures).
#
#   Conservative approach: we deliberately do NOT use "error::DeprecationWarning"
#   globally because zarr, h5py, and fsspec emit stdlib deprecations that would
#   make the suite fail today; that cleanup belongs in the dependency-upgrade
#   milestone (issue #1560).
filterwarnings = [
    # Surface first-party regressions as errors.
    "error::DeprecationWarning:scistudio.*",
    "error::PendingDeprecationWarning:scistudio.*",
    # Catch hidden async failures that would otherwise be swallowed.
    "error::pytest.PytestUnraisableExceptionWarning",
    # Known third-party deprecations — ignore until upstream resolves.
    "ignore::DeprecationWarning:zarr.*",
    "ignore::DeprecationWarning:fsspec.*",
    "ignore::DeprecationWarning:h5py.*",
    "ignore::DeprecationWarning:PIL.*",
    "ignore::DeprecationWarning:pkg_resources.*",
    "ignore::PendingDeprecationWarning",
]

[tool.importlinter]
root_packages = ["scistudio"]
# Round-4 no-cycles: count only imports that execute at runtime. A
# ``TYPE_CHECKING``-guarded import is a type-annotation reference, not a real
# module-load dependency, so it can never cause an import cycle or a real
# layering inversion. Excluding it matches the project's agreed "no-cycles"
# definition (the failure mode we guard against is a circular *import*, i.e. a
# module-load crash) and keeps annotation back-references (e.g. a bound-method
# module typing its owner class) from being flagged.
exclude_type_checking_imports = true

[[tool.importlinter.contracts]]
name = "Core must not depend on blocks, engine, api, ai, or workflow"
type = "forbidden"
source_modules = ["scistudio.core"]
forbidden_modules = ["scistudio.blocks", "scistudio.engine", "scistudio.api", "scistudio.ai", "scistudio.workflow"]
# ADR-038 §3.2: ``LineageRecorder`` (in core/lineage/) references the engine
# ``EventBus`` / ``EngineEvent`` types only under ``TYPE_CHECKING`` — event-name
# strings are hardcoded in core to avoid runtime coupling, and runtime objects
# arrive via constructor injection. That type-only edge no longer needs an
# ``ignore_imports`` carve-out: ``exclude_type_checking_imports`` (top of this
# section) already drops it from the graph.

[[tool.importlinter.contracts]]
name = "Blocks must not depend on engine, api, or ai services"
type = "forbidden"
source_modules = ["scistudio.blocks"]
forbidden_modules = ["scistudio.engine", "scistudio.api", "scistudio.ai"]
# Narrow carve-outs for engine-layer dispatch surfaces that block-layer
# code must call. Each entry cites the ADR that justifies the boundary
# crossing.
#
# ADR-035 §3.10: AIBlock.run() must call back to the engine to allocate
# a PTY tab and notify completion.
#
# ADR-028 §D8 (Phase -1 sprint, this PR + #1080): AppBlock's
# `_bin_outputs_by_extension` dispatches to
# `engine.materialisation.reconstruct_from_file` for typed DataObject
# reconstruction. The helper lives in `engine/` because it consumes
# `BlockRegistry` from `blocks/` (a `core/` placement would violate
# Core ↔ Blocks per the first contract above). Both ignore entries
# below are lazy function-body imports executed only inside the per-run
# AppBlock dispatch path.
#
# ADR-035 §3.8 (#1591): AIBlock.run() drives the agent runtime, lazily
# importing `ai.agent.terminal` helpers (`_ensure_mcp_config`,
# `_write_system_prompt_tempfile`) inside the per-run dispatch path. This
# edge only became visible to grimp once `ai/agent/` gained its
# `__init__.py` (#1591); the crossing is intentional and lazy, so it is
# carved out here rather than restructured.
ignore_imports = [
    "scistudio.blocks.ai.ai_block -> scistudio.engine.pty_control",
    "scistudio.blocks.ai.ai_block -> scistudio.ai.agent.terminal",
]

[[tool.importlinter.contracts]]
name = "Engine must not depend on api or ai services"
type = "forbidden"
source_modules = ["scistudio.engine"]
forbidden_modules = ["scistudio.api", "scistudio.ai"]
# ADR-035 §3.8 (#1591): the only engine->ai path is transitive through the
# block-registry scan — `engine.scheduler -> blocks.registry -> _spec ->
# blocks.ai.ai_block -> ai.agent.terminal`. The terminating edge is the same
# accepted lazy AIBlock->agent import carved out in the Blocks contract above
# (it became graph-visible once `ai/agent/` gained its `__init__.py`). Engine
# does not depend on ai services directly; it scans every block (incl. the AI
# block) via the registry. Carve out the same leaf edge here so the registry
# scan does not transitively trip this contract.
ignore_imports = [
    "scistudio.blocks.ai.ai_block -> scistudio.ai.agent.terminal",
]

# ---------------------------------------------------------------------------
# Round-4 no-cycles: complete the reverse-dependency coverage. The three
# contracts above only checked core/blocks/engine as sources; the lower/側
# layers below were unchecked, which let real inversions slip through (e.g.
# the bottom ``utils`` layer importing ``core``/``engine``). These contracts
# close that gap.
# ---------------------------------------------------------------------------

[[tool.importlinter.contracts]]
name = "Utils is the bottom layer — must not depend on higher layers"
type = "forbidden"
source_modules = ["scistudio.utils"]
forbidden_modules = [
    "scistudio.core",
    "scistudio.engine",
    "scistudio.blocks",
    "scistudio.workflow",
    "scistudio.ai",
    "scistudio.api",
    "scistudio.previewers",
]
# #1729: ``utils.axis_iter`` (ADR-027 D3 ``iterate_over_axes``) is documented
# public API consumed by the imaging plugin, so it stays in ``utils`` for now
# even though it lazily reads the core zarr backend. Tracked for relocation to
# ``core`` at #1729; carve out the edges until then.
ignore_imports = [
    "scistudio.utils.axis_iter -> scistudio.core.storage.zarr_backend",
    "scistudio.utils.axis_iter -> scistudio.core.storage.ref",
    "scistudio.utils.axis_iter -> scistudio.core.storage.flush_context",
]

[[tool.importlinter.contracts]]
name = "Workflow must not depend on ai or api"
type = "forbidden"
source_modules = ["scistudio.workflow"]
forbidden_modules = ["scistudio.ai", "scistudio.api"]
# Same accepted lazy leaf edge carved out in the Blocks and Engine contracts
# above: ``workflow.validator -> blocks.registry`` transitively reaches
# ``blocks.ai.ai_block -> ai.agent.terminal`` through the registry's per-run
# block scan. Workflow does not depend on ai services directly; it validates
# against the block registry, which scans every block (incl. the AI block).
ignore_imports = [
    "scistudio.blocks.ai.ai_block -> scistudio.ai.agent.terminal",
]

[[tool.importlinter.contracts]]
name = "AI must not depend on api"
type = "forbidden"
source_modules = ["scistudio.ai"]
forbidden_modules = ["scistudio.api"]

[[tool.importlinter.contracts]]
name = "Previewers must not depend on engine, blocks, workflow, ai, or api"
type = "forbidden"
source_modules = ["scistudio.previewers"]
forbidden_modules = [
    "scistudio.engine",
    "scistudio.blocks",
    "scistudio.workflow",
    "scistudio.ai",
    "scistudio.api",
]

# ---------------------------------------------------------------------------
# Round-4 no-cycles (#1341): no import cycles among a package's own siblings.
# Locks in this round's cycle fixes. ``exclude_type_checking_imports`` (above)
# keeps annotation back-references from tripping these. The big ``blocks``
# sibling SCC (registry auto-registration scanning concrete block classes via
# lazy imports) is deliberately NOT asserted: it is an accepted, load-safe
# plugin-scan pattern that is acyclic at module-load time.
# ---------------------------------------------------------------------------

[[tool.importlinter.contracts]]
name = "core.types submodules are acyclic"
type = "acyclic_siblings"
ancestors = ["scistudio.core.types"]

[[tool.importlinter.contracts]]
name = "core.storage submodules are acyclic"
type = "acyclic_siblings"
ancestors = ["scistudio.core.storage"]

[[tool.importlinter.contracts]]
name = "core.versioning submodules are acyclic"
type = "acyclic_siblings"
ancestors = ["scistudio.core.versioning"]

[[tool.importlinter.contracts]]
name = "api.runtime submodules are acyclic"
type = "acyclic_siblings"
ancestors = ["scistudio.api.runtime"]

[[tool.importlinter.contracts]]
name = "api.routes.ai_pty submodules are acyclic"
type = "acyclic_siblings"
ancestors = ["scistudio.api.routes.ai_pty"]

[[tool.importlinter.contracts]]
name = "ai.agent.mcp.tools_inspection submodules are acyclic"
type = "acyclic_siblings"
ancestors = ["scistudio.ai.agent.mcp.tools_inspection"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.2a0"
tag_format = "v$version"

# Issue #1340 / ADR-042 code-quality stack: vulture runs as an informational
# child report inside ``scistudio.qa.audit.full_audit``. Severity stays
# WARNING for the initial rollout so the report never sets ``blocks_merge`` on
# its own; promotion to ERROR is a follow-up once the allowlist is tuned.
[tool.vulture]
paths = ["src/scistudio"]
exclude = ["src/scistudio/api/static/**"]
min_confidence = 80
sort_by_size = false
ignore_decorators = ["@app.*", "@router.*", "@pytest.fixture"]

[tool.coverage.run]
source = ["scistudio"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
# TODO(#1540): Restore coverage gate to ≥80% once ADR-034 Phase 1-3 tests are
#   added back. Lowered temporarily during PR #808 rollback.
#   Out of scope per owner decision recorded in issue #1540.
#   Followup: https://github.com/zjzcpj/scistudio/issues/1540
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
