[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "scistudio-blocks-example"
version = "0.1.0"
description = "Example multi-block package for SciStudio."
readme = "README.md"
authors = [
    {name = "SciStudio Contributors"},
]
requires-python = ">=3.11"
dependencies = [
    "scistudio>=0.2.1",
    "numpy>=1.24",
    "pydantic>=2.0",
    "scipy>=1.10",
    "scikit-image>=0.21",
]

[project.entry-points."scistudio.blocks"]
example = "my_blocks:get_blocks"

[project.entry-points."scistudio.types"]
example = "my_blocks:get_types"

[tool.hatch.build.targets.wheel]
packages = ["src/my_blocks"]
